--- a/chat.html
+++ b/chat.html
@@ -8,17 +8,16 @@
     </head>
     <body id="chat-screen">
         <div class="status-bar">
-            <div class="status-bar__column">
-                <span>No Service</span>
-                <i class="fa-solid fa-wifi"></i>
-            </div>
-            <div class="status-bar__column">
-                <span>18:43</span>
-            </div>
-            <div class="status-bar__column">
-                <span>110%</span>
-                <i class="fa-solid fa-battery-full fa-lg"></i>
-                <i class="fa-solid fa-bolt"></i>
+            <div class="status-bar">
+                <div class="status-bar__column">
+                    <span>18:43</span>
+                    <span>SKT</span>
+                </div>
+                <div class="status-bar__column">
+                    <i class="fa-solid fa-wifi"></i>
+                    <span>72%</span>
+                    <i class="fa-solid fa-battery-full fa-lg"></i>
+                </div>
             </div>
         </div>
 
