--- a/chats.html
+++ b/chats.html
@@ -8,17 +8,16 @@
     </head>
     <body>
         <div class="status-bar">
-            <div class="status-bar__column">
-                <span>No Service</span>
-                <i class="fa-solid fa-wifi"></i>
-            </div>
-            <div class="status-bar__column">
-                <span>18:43</span>
-            </div>
-            <div class="status-bar__column">
-                <span>110%</span>
-                <i class="fa-solid fa-battery-full fa-lg"></i>
-                <i class="fa-solid fa-bolt"></i>
+            <div class="status-bar">
+                <div class="status-bar__column">
+                    <span>18:43</span>
+                    <span>SKT</span>
+                </div>
+                <div class="status-bar__column">
+                    <i class="fa-solid fa-wifi"></i>
+                    <span>72%</span>
+                    <i class="fa-solid fa-battery-full fa-lg"></i>
+                </div>
             </div>
         </div>
 
@@ -28,7 +27,11 @@
                 <span><i class="fas fa-search fa-lg"></i></span>
                 <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
                 <span><i class="fas fa-music fa-lg"></i></span>
-                <span><i class="fas fa-cog fa-lg"></i></span>
+                <span>
+                    <a href="settings.html">
+                        <i class="fas fa-cog fa-lg"></i>
+                    </a>
+                </span>
             </div>
         </header>
 
