--- a/more.html
+++ b/more.html
@@ -8,17 +8,16 @@
     </head>
     <body>
         <div class="status-bar">
-            <div class="status-bar__column">
-                <span>No Service</span>
-                <i class="fa-solid fa-wifi"></i>
-            </div>
-            <div class="status-bar__column">
-                <span>18:43</span>
-            </div>
-            <div class="status-bar__column">
-                <span>110%</span>
-                <i class="fa-solid fa-battery-full fa-lg"></i>
-                <i class="fa-solid fa-bolt"></i>
+            <div class="status-bar">
+                <div class="status-bar__column">
+                    <span>18:43</span>
+                    <span>SKT</span>
+                </div>
+                <div class="status-bar__column">
+                    <i class="fa-solid fa-wifi"></i>
+                    <span>72%</span>
+                    <i class="fa-solid fa-battery-full fa-lg"></i>
+                </div>
             </div>
         </div>
 
@@ -84,10 +83,10 @@
                     </div>
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
-                            <i class="fas fa-quote-right"></i>
+                            <i class="fa-solid fa-gamepad"></i>
                         </div>
                         <span class="more-suggestions__icon-text"
-                            >Kokoa Story</span
+                            >Kokoa Game</span
                         >
                     </div>
                 </div>
