--- a/settings.html
+++ b/settings.html
@@ -8,23 +8,22 @@
     </head>
     <body>
         <div class="status-bar">
-            <div class="status-bar__column">
-                <span>No Service</span>
-                <i class="fa-solid fa-wifi"></i>
-            </div>
-            <div class="status-bar__column">
-                <span>18:43</span>
-            </div>
-            <div class="status-bar__column">
-                <span>110%</span>
-                <i class="fa-solid fa-battery-full fa-lg"></i>
-                <i class="fa-solid fa-bolt"></i>
+            <div class="status-bar">
+                <div class="status-bar__column">
+                    <span>18:43</span>
+                    <span>SKT</span>
+                </div>
+                <div class="status-bar__column">
+                    <i class="fa-solid fa-wifi"></i>
+                    <span>72%</span>
+                    <i class="fa-solid fa-battery-full fa-lg"></i>
+                </div>
             </div>
         </div>
 
         <header class="alt-header">
             <div class="alt-header__column">
-                <a href="more.html">
+                <a href="javascript:history.back()">
                     <i class="fa-solid fa-angle-left fa-2x"></i>
                 </a>
             </div>
