Completed README.md and cleaned up the code

--- a/find.html
+++ b/find.html
@@ -66,8 +66,8 @@
                 </div>
                 <div class="open-post">
                     <div class="open-post__column">
-                        <h5 class="open-post__title">#BTS</h5>
-                        <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                        <h5 class="open-post__title">#Coding</h5>
+                        <h6 class="open-post__hashtags">#coding#friends</h6>
                         <div class="open-post__members">
                             <img
                                 src="https://avatars.githubusercontent.com/u/62834557?s=40&v=4"
