--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
                 placeholder="Email or phone number"
                 required
             />
-            <input name="password" type="password" placeholder="Password" required/>
+            <input
+                name="password"
+                type="password"
+                placeholder="Password"
+                required
+            />
             <input type="submit" value="Log In" />
             <a href="#">Find Kokoa Account or Password</a>
         </form>
